[gd_scene load_steps=3 format=3 uid="uid://f38j1136oqm4"]

[ext_resource type="Theme" uid="uid://diu3ahrw1puva" path="res://addons/HTNDomainManager/PluginSystem/PluginTheme.tres" id="1_e6mfo"]
[ext_resource type="Script" path="res://addons/HTNDomainManager/PluginSystem/Components/Tree/TreeDropButton/TreeDropButton.gd" id="1_tmr4d"]

[node name="TreeDropButton" type="MarginContainer"]
offset_right = 40.0
offset_bottom = 40.0
size_flags_horizontal = 3
theme = ExtResource("1_e6mfo")
script = ExtResource("1_tmr4d")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="Button" type="Button" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
toggle_mode = true
alignment = 0

[node name="SubButtons" type="VBoxContainer" parent="VBoxContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
mouse_filter = 2

[connection signal="toggled" from="VBoxContainer/Button" to="." method="_on_button_toggled"]
